[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = dj-cloud-error
version = 0.1.0
description = Report exceptions from Django to Google Stackdriver Error Reporting
author = Prismatic Digital
author_email = contact@prismaticdigital.com
url = https://github.com/prismaticd/dj-cloud-error
download_url = https://github.com/dj-stripe/dj-stripe/tarball/master
long_description_content_type = text/x-rst
keywords = django, google cloud, error reporting
license = "MIT license"
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Framework :: Django
	Framework :: Django :: 2.2

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =
	Django >= 2.2
	google-cloud-error-reporting
tests_require =
	pytest-django
test_suite = tests

[options.packages.find]
exclude =
    docs
    tests
    tests.*

[options.extras_require]
ip = django-ipware

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:dj_cloud_error/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 0

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

